[tool.poetry]
name = "domain_gap"
version = "0.1.0"
description = ""
authors = ["Danielle Ben Bashat <daniellebenba@gmail.com>"]
readme = "README.md"
packages = [{include = "domain_gap"}]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
google-cloud-storage = "^2.10.0"
tensorflow-io-gcs-filesystem = "0.34.0"
tensorflow = "2.11.1"
code-loader-helpers = "^1.0.17"
code-loader = "^1.0.64"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_integration"
